Revision history for DBIx::Class

        - Complete Sybase RDBMS support including:
          - Support for TEXT/IMAGE columns
          - Support for the 'money' datatype
          - Transaction savepoints support
          - DateTime inflation support
          - Support for bind variables when connecting to a newer Sybase with
             OpenClient libraries
          - Support for connections via FreeTDS with CASTs for bind variables
             when needed
          - Support for interpolated variables with proper quoting when
             connecting to an older Sybase and/or via FreeTDS
          - bulk API support for populate()
        - Transaction support for MSSQL via DBD::Sybase
        - Add is_paged method to DBIx::Class::ResultSet so that we can
          check that if we want a pager
        - Skip versioning test on really old perls lacking Time::HiRes
          (RT #50209)
        - Fixed on_connect_do/call regression when used with a coderef
          connector (RT #50003)
        - A couple of fixes to Ordered to remedy subclassing issues
        - Fixed another lingering problem with PostgreSQL
          auto-increment support and its interaction with multiple
          schemas
        - Remove some IN workarounds, and require a recent version of
          SQLA instead
        - Improvements to populate's handling of mixed scalarref values
        - POD improvements

0.08112 2009-09-21 10:57:00 (UTC)
        - Remove the recommends from Makefile.PL, DBIx::Class is not
          supposed to have optional dependencies. ever.
        - Mangle the DBIx/Class.pm POD to be more clear about
          copyright and license
        - Put back PG's multiple autoinc per table support, accidentally
          dropped during the serial-autodetection rewrite
        - Make sure ResultSetColumn does not depend on the (undefined)
          return value of ->cursor->reset()
        - Add single() to ResultSetColumn (same semantics as ResultSet)